--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -25,12 +25,6 @@ body {
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
-@media (max-width: 767.98px) {
-  .sidebar {
-    top: 5rem;
-  }
-}
-
 .sidebar-sticky {
   height: calc(100vh - 48px);
   overflow-x: hidden;
@@ -65,10 +59,14 @@ body {
  */
 
 .navbar-brand {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  background-color: rgba(0, 0, 0, .25);
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+  a {
+    color: #fff;
+    text-decoration: none;
+
+    &:link, &:visited, &:hover, &:active {
+      color: #fff;
+    }
+  }
 }
 
 .navbar .navbar-toggler {
@@ -78,6 +76,10 @@ body {
 
 .navbar .form-control {
   padding: .75rem 1rem;
+}
+
+.navbar .navbar-extra {
+  font-size: 12px;
 }
 
 .form-control-dark {
